# xkollar.github.io

./: CNAME  archive.html  atom.xml  bookmarks.html  deploy.sh  hakyll-test.cabal  index.html  links.md  shell.nix  stack.yaml  useful.sh
code/: site.hs
css/: main.css
data/: bookmarks.markdown  index.html
data/css/: main.css
posts/: 2016-02-19-maybe-joke.html  2016-03-18-c-language.html  2016-03-21-kapr.html  2016-06-19-joke.html  2016-08-19-life.html  2016-08-25-earth.html  2016-12-31-tea-ceremony.html  2017-01-08-graphviz-support.html  2017-01-09-abc-notation.html  2017-01-16-minuet-and-stuff.html  2017-01-31-kocka-leze-dirou.html  2017-02-13-scherzino.html  2017-02-28-kdes-holubicko-litala.html  2017-03-01-dot-org.html  2017-03-03-little-song.html  2017-03-15-heroku-and-https.html  2017-03-24-sensible-scraping.html  2017-05-29-gavotte.html  2017-05-30-morning-greeting.html  2017-10-06-city-1.html  2017-10-31-show-constructor.html  2017-11-03-type.html  2017-11-14-bash-in-the-uk.html  2018-01-25-fine-grained-io-with-mtl.html  2018-01-29-shift-to-gray.html  2018-01-29-shift-to-grey.html  2018-03-02-fine-grained-io-with-mtl-simplified.html  2018-03-03-13-some-types.html  2018-03-13-some-types.html  2020-11-23-bash-interview-echo.html  2021-01-10-daily-commute.html  2021-10-06-cubic-bezier-for-openscad.html  2022-04-03-shapes-of-cube.html  2023-10-13-monty-hall-problem.html  2023-10-15-climbing-falls.html  2024-01-24-tax-effective-and-perceived.html  2024-01-30-pre-and-post-hooks-in-bash.html  2024-01-31-humbling-experience.html  2024-02-03-reflection.html  2024-02-18-comprehension.html  (+15 more)
tags/: Bash.html  CZ.html  Climbing.html  Fun.html  Haiku.html  Hakyll.html  Haskell.html  Interview.html  Linux.html  Math.html  Music.html  OpenSCAD.html  Probability.html  Python.html  SoC.html  Stub.html  Tax.html  index.html  mtl.html  soc.html
tax/: script.gnuplot  tax.hs
testing-sub-sample/: confidence.py  errors.py  online.py
(+60 files in other folders)
