name:               hakyll-test
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , blaze-html == 0.9.*

                  , base64-bytestring
                  , directory
                  , pandoc
                  , pandoc-types
                  , process
                  , regex-compat
                  , temporary
                  , text
                  , utf8-string

  hs-source-dirs:   code
  ghc-options:      -threaded -O2
  default-language: Haskell2010
